fix: fix cookies dialog button contrast
Fix cookies dialog button contrast in dark mode

Fixes #1008

--- a/src/app/shared/cookie-popup/_cookie-popup-theme.scss
+++ b/src/app/shared/cookie-popup/_cookie-popup-theme.scss
@@ -16,6 +16,10 @@
         map.get(mat.$dark-theme-foreground-palette, secondary-text)
       );
       background: if($is-dark-theme, map.get(mat.$grey-palette, 50), #252525);
+
+      .buttons {
+        color: if($is-dark-theme, map.get($primary, 600), map.get($accent, default));
+      }
     }
   }
 }
